intTests/test_type_errors/err028.log.good
Loading file "err028.saw"
Type errors:
  err028.saw:5:9-5:15: Kind mismatch: expected * -> * but found *
  err028.saw:5:22-5:27: Error: Type mismatch.
    Expected: t.0 Int
    Found:    String

  err028.saw:5:9-5:19: Note: The type t.0 Int arises from this type annotation
  err028.saw:5:22-5:27: Note: The type String arises from the type of this term


FAILED
