intTests/test_type_errors/err028.saw
//
// Too many arguments for type constructor: String
//
// Currently this is a parser message; the kind mismatch message in
// the typechecker is unreachable.

let x : String Int = "abc";


